<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/getstarted_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/logo" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sign_up_text3"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/sign_up"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">

                <View
                    android:id="@+id/sign_up_view1"
                    android:layout_width="20dp"
                    android:layout_height="2dp"
                    android:layout_marginRight="5dp"
                    android:background="#808080" />


                <View
                    android:id="@+id/sign_up_view2"
                    android:layout_width="20dp"
                    android:layout_height="2dp"
                    android:layout_marginRight="5dp"
                    android:background="#808080" />


                <View
                    android:id="@+id/sign_up_view3"
                    android:layout_width="20dp"
                    android:layout_height="2dp"
                    android:background="#FFFFFF" />

            </LinearLayout>


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="50dp"
                        android:orientation="horizontal">


                        <CheckBox
                            android:id="@+id/newsletter_check"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/checkbox_bg" />

                        <TextView
                            android:id="@+id/newsletter_text"
                            style="@style/Base.TextAppearance.AppCompat.Medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/news_letter"
                            android:textColor="#FFFFFF"
                            android:textStyle="bold" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">


                        <android.support.design.widget.TextInputLayout

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_weight="1"
                            android:textColorHint="#FFFFFF">

                            <EditText
                                android:id="@+id/sign_up_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_weight="1"
                                android:hint="Password"
                                android:inputType="textPassword"
                                android:textColor="#FFFFFF"
                                android:textColorHint="#FFFFFF" />

                        </android.support.design.widget.TextInputLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">


                        <android.support.design.widget.TextInputLayout

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_weight="1"
                            android:textColorHint="#FFFFFF">

                            <EditText
                                android:id="@+id/sign_up_confirm_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_weight="1"
                                android:hint="Confirm Password"
                                android:inputType="textPassword"
                                android:textColor="#FFFFFF"
                                android:textColorHint="#FFFFFF" />

                        </android.support.design.widget.TextInputLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:orientation="horizontal">


                        <CheckBox
                            android:id="@+id/sign_up_termsconditions_check"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#FFFFFF"
                            android:button="@drawable/checkbox_bg" />

                        <TextView
                            android:id="@+id/terms_text"
                            style="@style/Base.TextAppearance.AppCompat.Medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/terms"
                            android:textColor="#FFFFFF"
                            android:textStyle="bold" />

                    </LinearLayout>


                    <Button
                        android:id="@+id/sign_up_register"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical|center_horizontal|bottom"

                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/button_bg"
                        android:padding="10dp"
                        android:text="@string/register"
                        android:textColor="#FFFFFF" />


                </LinearLayout>


            </ScrollView>


        </LinearLayout>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_view"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>