<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/getstarted_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/logo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/getstarted_bg"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sign_in_text"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="Sign in"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginTop="10dp"
                    android:background="#FFFFFF" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_weight="0"
                        android:src="@drawable/email" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColorHint="#FFFFFF">

                        <EditText
                            android:id="@+id/sign_in_email_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:hint="Email/User Name"
                            android:inputType="textEmailAddress"
                            android:textColor="#FFFFFF"
                            android:textColorHint="#FFFFFF" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"

                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_weight="0"
                        android:src="@drawable/password" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColorHint="#FFFFFF">

                        <EditText
                            android:id="@+id/sign_in_pass_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_weight="1"
                            android:hint="Password"
                            android:inputType="textPassword"
                            android:textColor="#FFFFFF"
                            android:textColorHint="#FFFFFF" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/sign_in_forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginRight="20dp"
                    android:gravity="right"
                    android:text="Forgot Password"
                    android:textColor="#FFFFFF" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/login"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/button_bg"
                        android:padding="10dp"
                        android:text="@string/login"
                        android:textColor="#FFFFFF" />


                    <Button
                        android:id="@+id/register"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/button_bg"
                        android:padding="10dp"
                        android:text="@string/register"
                        android:textColor="#FFFFFF" />

                    <Button
                        android:id="@+id/visit_app"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/button_bg"
                        android:padding="10dp"
                        android:text="@string/visit_app"
                        android:textColor="#FFFFFF" />


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_view"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>